--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "target": "ES5",
+    "allowJs": true,
+    "strict": true,
+    "noEmit": true,
+    "jsx": "react-native"
+  },
+  "include": ["./**/*"]
 }
