--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "allowJs": true,
     "strict": true,
     "noEmit": true,
-    "jsx": "react-native",
-    "types": ["styled-components-react-native"]
+    "jsx": "react-native"
   },
   "include": ["./**/*"]
 }
