--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
-    "expo-app-loading": "^2.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -26,16 +25,13 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-query": "^3.39.1",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "18.0.0",
     "@types/react-native": "~0.66.13",
     "@types/react-native-dotenv": "^0.2.0",
-    "@types/react-redux": "^7.1.24",
     "typescript": "~4.3.5"
   },
   "private": true
